# cmakepractice

./: .gitignore  README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
